...
                    VStack(spacing: 20) {
                        Button(action: {
                            vm.login(userViewModel: userViewModel)
                        }) {
                            SimpleButtonView(text: "Login", bgColor: .blue)
                        }
                        .accessibilityIdentifier("loginButton")
                        
                        Button(action: {
                            vm.showRegisterView = true
                        }) {
                            SimpleButtonView(text: "Register", bgColor: .blue)
                        }
...
