...
                        await vm.searchShows()
                    }
                })
                .textFieldStyle(RoundedBorderTextFieldStyle())
                .foregroundStyle(.black.opacity(0.6))
                .padding()
                .accessibilityIdentifier("searchField")
                
               Spacer()
               if vm.isLoading {
                   LoadingScreenView(text: "Loading...")
               } else if vm.noShowsFound() {
                   Text(vm.noShowsFoundText)
...
