...
                if let img = Image.fromFolder(named: "projector") {
                    img
                        .resizable()
                        .scaledToFit()
                        .frame(width: 150)
                        .colorMultiply(imageColor)
                        .accessibilityIdentifier("loadingScreen")
                }
                
                HStack(spacing: 10) {
                    if let img = Image.fromFolder(named: "tape") {
                        img
                            .resizable()
...
